# radlab-plwordnet

./: LICENSE  README.md  plwordnet-mysql.py  requirements-trainer.txt  setup.py  wikipedia-test.py
_toml/: download_resources.py  pyproject.toml
apps/: plwordnet-mysql.py  plwordnet_cli.py  plwordnet_mysql.py  wikipedia-test.py
apps/cli/: plwordnet_cli.py
apps/test_app/: synset-embeddings-test.py
apps/utils/embedder/: convert-raw-embedder-dump-to-dataset.py
plwordnet_handler/api/: plwordnet.py  plwordnet_i.py
plwordnet_handler/api/data/: comment.py  wikipedia.py
plwordnet_handler/connectors/: connector_i.py  db_connector.py  db_to_nx_data_mapper.py  nx_connector.py
plwordnet_handler/connectors/db/: config.py  db_to_nx.py  mysql.py
plwordnet_handler/structure/: polishwordnet.py
plwordnet_handler/structure/elems/: lu.py  lu_in_synset.py  lu_relations.py  rel_type.py  synset.py  synset_relation.py
plwordnet_ml/embedder/trainer/: train-bi-encoder.py
plwordnet_trainer/embedder/constants/: wandb.py
plwordnet_trainer/embedder/synset/: generator.py
plwordnet_trainer/utils/: argument_parser.py  training_handler.py  wandb_handler.py
resources/: plwordnet-mysql-db.json
scripts/: init-db-insert-lu-syn-dump-relgat.sh
